# models/user.go
@@ -20,9 +20,10 @@ type User struct {
 	Organization   *Organization   `json:"organization,omitempty" gorm:"foreignKey:OrganizationID;references:ID"`
 }
 
+// Internal search
 type SearchUser struct {
-	ID             string `json:"id,omitempty" validate:"omitempty,uuid4"`
-	Username       string `json:"username,omitempty" validate:"omitempty"`
-	Role           string `json:"role,omitempty" validate:"omitempty"`
-	OrganizationID string `json:"organization_id,omitempty" validate:"omitempty,uuid4"`
+	ID             string `json:"id,omitempty"`
+	Username       string `json:"username,omitempty"`
+	Role           string `json:"role,omitempty"`
+	OrganizationID string `json:"organization_id,omitempty"`
 }
